--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@googleworkspace/meet-addons": "^1.2.0",
+    "@types/google-one-tap": "^1.2.6",
+    "google-auth-library": "^9.15.1",
     "next": "15.2.3",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
